opsiconfd (4.0.6.11-1) UNRELEASED; urgency=medium

  * Show messages during creation of pid file.
  * logrotate-config: no more global options.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 21 Oct 2015 11:51:02 +0200

opsiconfd (4.0.6.10-7) stable; urgency=medium

  * opsiconfd.service: Make sure that /var/run/opsiconfd can be accessed.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 05 Oct 2015 17:27:32 +0200

opsiconfd (4.0.6.10-6) stable; urgency=medium

  * CentOS / RHEL 7: reference the right service in systemd template.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 05 Oct 2015 16:32:33 +0200

opsiconfd (4.0.6.10-5) stable; urgency=medium

  * added sles12 fix for smb service name

 -- Mathias Radtke <raddi@pcmathias.uib.local>  Fri, 02 Oct 2015 15:15:28 +0200

opsiconfd (4.0.6.10-4) experimental; urgency=medium

  * RPM: opsiconfd is member of the file admin group again.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Fri, 02 Oct 2015 10:49:31 +0200

opsiconfd (4.0.6.10-3) experimental; urgency=low

  * openSuse 13.2: Specify correct servie names in systemd unit.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 29 Sep 2015 12:27:11 +0200

opsiconfd (4.0.6.10-2) experimental; urgency=medium

  * Default logrotate configuration now only rotates package.log
    and opsiconfd.log.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 15 Sep 2015 14:13:18 +0200

opsiconfd (4.0.6.10-1) experimental; urgency=medium

  * Adjusting configuration for logrotate.
  * opsiconfd: Config 'maxLogSize' now is a number
  * opsiconfd.conf: change 'max log size' to 5MB

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 14 Sep 2015 15:18:36 +0200

opsiconfd (4.0.6.9-1) experimental; urgency=medium

  * Removed itext-pdf.jar from the configed JNLP template.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 14 Sep 2015 10:24:28 +0200

opsiconfd (4.0.6.8-1) experimental; urgency=medium

  * Info page: limit the length of average call duration.
