@@ -2,8 +2,9 @@ opsiconfd (4.0.6.11-1) UNRELEASED; urgency=medium
 
   * Show messages during creation of pid file.
   * logrotate-config: no more global options.
+  * opsiconfd.monitoring: import cleanup.
 
- -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 21 Oct 2015 11:51:02 +0200
+ -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 22 Oct 2015 15:11:47 +0200
 
 opsiconfd (4.0.6.10-7) stable; urgency=medium
 
